# parallel

./: README.md
IntegerSort/: CMakeLists.txt  sort  sort.c  temp.c
matrix_multi/: CMakeLists.txt  Matrix_mul.c  code.txt  one_dem.c  two_dem.c
