cmake_minimum_required(VERSION 3.13)
project(matrix_multi C)

set(CMAKE_C_STANDARD 99)
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_compile_options(-march=native)
add_executable(Matrix_mul Matrix_mul.c)
add_executable(matrix_one_dem one_dem.c )